<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <LinearLayout
        android:background="@drawable/content_bg_round"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <ImageView

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.20"
                android:src="@drawable/ic_user_home_profile" />

            <TextView

                android:paddingTop="8dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.80"
                android:text="@string/feedback_and_ratings_name" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"  >

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="0.80"
                android:paddingTop="8dp"
                android:text="@string/feedback_and_ratings_rating"
                android:textStyle="bold" />

            <TextView

                android:paddingTop="8dp"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.80"
                android:text="@string/feedback_and_ratings_comment" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>