<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sewaseven.sewaseven.RegisterNewService">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="30dp"
                        android:gravity="center_horizontal"
                        android:text="@string/new_service_heading"
                        android:textColor="#000000"
                        android:textSize="24dp"
                        android:textStyle="bold" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="120dp"
                        android:layout_weight="1" />


                </LinearLayout>


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    app:srcCompat="@drawable/ic_undraw_services_5tv9" />


            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:text="@string/new_service_name"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/servicename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:text="@string/new_service_description"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <EditText

                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal"
                android:text="@string/new_service_phone_number"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/phonenumber"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:ems="10"
 />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal"
                android:text="@string/new_service_location"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/spinnernew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal"
                android:text="@string/new_service_upload_image"
                android:textColor="#000000"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="40dp"
                app:srcCompat="@drawable/ic_picture" />


            <Button
                android:id="@+id/button2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="100dp"
                android:layout_marginBottom="30dp"
                android:backgroundTint="@color/btn_background"

                android:padding="15dp"
                android:text="@string/new_service_done"
                android:textColor="@color/btn_text"
                android:textSize="18sp" />



        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>