<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sewaseven.sewaseven.AddNewFaq">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

<!--            -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/new_faq_heading"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <ImageView

                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_icons8_plus" />
                </LinearLayout>

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/update_FAQ_question"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/newFAQ_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine" />

                <TextView
                    android:layout_marginTop="40dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/update_FAQ_answer"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/newFAQ_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine" />

                <Button
                    android:layout_marginTop="80dp"
                    android:id="@+id/newFAQ_save_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/btn_background"
                    android:text="@string/update_FAQ_done"
                    android:textColor="@color/btn_text" />


            </LinearLayout>

            <!--            -->

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>